[article]: article: comment & docs create
